--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 .jumbotron{
     background-color: cadetblue;
+    margin-top: 50px;
 }
 
 .card-hotel{
     flex: 1 150px;
     padding: 2px 2px 2px 2px;
-    height: 100%;
     margin-top: 10px;
 }
 
